--- a/jszip.html
+++ b/jszip.html
@@ -3,6 +3,7 @@
 <head lang="en">
     <meta charset="UTF-8">
     <title>测试JSZIP</title>
+    <link rel="shortcut icon" href="http://git.docfeng.top/ico/feng.ico" type="image/x-icon">
 </head>
 <body>
     <input type="file" id="file"/>
