--- a/jszip.html
+++ b/jszip.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head lang="en">
-    <meta charset="UTF-8">
+    <meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
     <title>测试JSZIP</title>
     <link rel="shortcut icon" href="http://git.docfeng.top/ico/feng.ico" type="image/x-icon">
 </head>
