--- a/git.html
+++ b/git.html
@@ -9,6 +9,7 @@
 <META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
 <META HTTP-EQUIV="expires" CONTENT="0">
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<link rel="shortcut icon" href="http://git.docfeng.top/ico/feng.ico" type="image/x-icon">
 <!--<script src="//git.docfeng.top/js/_ini.js"></script>
 <script src="//git.docfeng.top/script/http.js"></script>
 <script src="//git.docfeng.top/script/git.js"></script>
