--- a/pwa/index.html
+++ b/pwa/index.html
@@ -20,6 +20,12 @@
     }).catch(function(a){
         alert(a)
     })
+    navigator.serviceWorker.addEventListener('message', function (event) {
+    if (e.data === 'sw.update') {
+        // 此处可以操作页面的 DOM 元素啦
+    }
+    });
   }
+  
 </script>
 </html>
