--- a/pwa/index.html
+++ b/pwa/index.html
@@ -23,6 +23,7 @@
     navigator.serviceWorker.addEventListener('message', function (event) {
     if (e.data === 'sw.update') {
         // 此处可以操作页面的 DOM 元素啦
+        alert(e.data)
     }
     });
   }
