--- a/pwa/index.html
+++ b/pwa/index.html
@@ -17,6 +17,7 @@
     navigator.serviceWorker.register('sw.js').then(function(registartion){
     alert(1)
       console.log('支持sw:',registartion.scope)
+      navigator.serviceWorker.controller && navigator.serviceWorker.controller.postMessage('sw.updatedone');
     }).catch(function(a){
         alert(a)
     })
