--- a/pwa/index.html
+++ b/pwa/index.html
@@ -15,7 +15,7 @@
   if(navigator.serviceWorker != null){
     alert(navigator.serviceWorker.register)
     navigator.serviceWorker.register('sw.js').then(function(registartion){
-      alert(1)
+      alert("成功")
       navigator.serviceWorker.controller && navigator.serviceWorker.controller.postMessage('sw.updatedone');
     }).catch(function(a){
         alert(a)
