--- a/pwa/index.html
+++ b/pwa/index.html
@@ -9,6 +9,8 @@
 </head>
 <body>
   <h3>Hello PWA</h3>
+  <input type="button" onclick="eval(txt.value)" />
+  <textarea id="txt" style="width:100%;height:500px;"></textarea>
 </body>
 <script>
   // 检测浏览器是否支持SW
