--- a/pwa/index.html
+++ b/pwa/index.html
@@ -15,6 +15,9 @@
 <script>
   // 检测浏览器是否支持SW
 window.addEventListener('load',function(e){
+  reg();
+}
+var reg=function(){
   if(navigator.serviceWorker != null){
     navigator.serviceWorker.register('sw.js').then(function(registartion){
       navigator.serviceWorker.controller && navigator.serviceWorker.controller.postMessage('sw.updatedone');
