--- a/pwa/index.html
+++ b/pwa/index.html
@@ -15,7 +15,9 @@
 <script>
   // 检测浏览器是否支持SW
 window.addEventListener('load',function(e){
+alert()
   reg();
+  alert()
 }
 var reg=function(){
   if(navigator.serviceWorker != null){
