--- a/contenMenu.html
+++ b/contenMenu.html
@@ -1,7 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta charset="UTF-8">
+		<meta name="apple-mobile-web-app-title" content="github文件读写" />
+<META HTTP-EQUIV="pragma" CONTENT="no-cache" /> 
+<meta name="apple-mobile-web-app-capable" content="yes" /> 
+<meta name="apple-touch-fullscreen" content="yes" />
+<meta http-equiv="Content-Type" content="application/xhtml+xml;charset=utf-8" />
+<META HTTP-EQUIV="Cache-Control" CONTENT="no-cache, must-revalidate"> 
+<META HTTP-EQUIV="expires" CONTENT="0">
+<meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
+<link rel="shortcut icon" href="http://git.docfeng.top/ico/feng.ico" type="image/x-icon">
 		<title>右键菜单事件</title>
 		<style type="text/css">
 			*{
@@ -12,13 +20,18 @@ html,body{
     height:100%;
     width:100%;
 }
-.d1 #d1{
-   // height:100%;
-    //width:100%;
-    background-colr:red;
-}
-			.bg{
+			.d1{
 				width: 100%;
+				height: 500px;
+				border: 1px solid darkgray;
+				//display: none;
+				position: fixed;
+				left: 0px;
+				top: 0px;
+			}
+   
+			.bg{
+				width: 100px;
 				height: 240px;
 				border: 1px solid darkgray;
 				display: none;
@@ -30,11 +43,9 @@ html,body{
 				list-style-type: none;
 				text-align: center;
 				line-height: 60px;
-width:100%;
 			}
 			li:hover{
 				background-color: darkgrey;
-width:100%;float: left;
 			}
 		</style>
 	</head>
@@ -57,8 +68,10 @@ width:100%;float: left;
 		{
 			//e.preventDefault();//取消右键菜单的默认行为
 			div.style.display='block';
-			div.style.left=e.clientX+'px';
-			div.style.top=e.clientY+'px';
+var x=document.body.clientWidth-e.clientX
+var y=document.body.clientHeight-e.clientY
+div.style.left=x>100?(e.clientX+'px'):((e.clientX-100)+'px');
+div.style.top=y>240?(e.clientY+'px'):((e.clientY-240)+'px');
 		})
 		div.addEventListener('click',function()//左键点击菜单消失
 		{
