--- a/contenMenu.html
+++ b/contenMenu.html
@@ -64,19 +64,30 @@ html,body{
 	</body>
 	<script type="text/javascript">
 		var div=document.querySelector('.bg');
+
 var obj={
-    handleEvent:function(){
+    handleEvent:function(e){
           //alert(event.type)
           var a=this[event.type]
           //alert(a);
-          a()
+          a&&a(e)
     },
     touchmove:function(){
         clearTimeout(this.a)
     },
-    touchstart:function(a){
+    touchstart:function(e){
+        var x=e.touches[0].pageX;
+        var y=e.touches[0].pageY;
         this.a=setTimeout(function(a){
-                alert(123)
+                var event = document.createEvent("MouseEvents");
+                // initEvent接受3个参数：
+                // 事件类型，是否冒泡，是否阻止浏览器的默认行为
+                event.initMouseEvent("long", true, false,window,1,e.screenX, e.screenY, x, y, e.ctrlKey, e.altKey, e.shiftKey, e.metaKey, e.button, e.relatedTarget);
+                //event.clientX=e.clientX;
+                //event.clientY=e.clientY;
+                //event.eventType = 'message';
+                //触发document上绑定的自定义事件
+                e.srcElement.dispatchEvent(event);
         },300);
     },
     touchend:function(){
@@ -89,15 +100,14 @@ var obj={
 document.addEventListener("touchstart",obj);
 document.addEventListener("touchend",obj);
 document.addEventListener("touchcancel",obj)
-	        d1.addEventListener('click',function(e)//右键菜单事件
-		{
-			//e.preventDefault();//取消右键菜单的默认行为
-			div.style.display='block';
-var x=document.body.clientWidth-e.clientX
-var y=document.body.clientHeight-e.clientY
-div.style.left=x>100?(e.clientX+'px'):((e.clientX-100)+'px');
-div.style.top=y>240?(e.clientY+'px'):((e.clientY-240)+'px');
-		})
+document.addEventListener("long",function(e){
+    e.preventDefault();//取消右键菜单的默认行为
+    div.style.display='block';
+    var x=document.body.clientWidth-e.clientX
+    var y=document.body.clientHeight-e.clientY
+    div.style.left=x>100?(e.clientX+'px'):((e.clientX-100)+'px');
+    div.style.top=y>240?(e.clientY+'px'):((e.clientY-240)+'px');
+},true);
 		div.addEventListener('click',function()//左键点击菜单消失
 		{
                      var ele=event.srcElement;
