--- a/dir.html
+++ b/dir.html
@@ -11,7 +11,7 @@
 <meta name="viewport" content="width=device-width,initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>文件管理系统for git</title>
 <meta name="description" content="版本号1.0" />
-<script src="http://git.docfeng.top/script/base.js"></script>
+<script src="//git.docfeng.top/script/base.js"></script>
 <script src="script/http.js"></script>
 <script src="script/gitapi.js?i=1"></script>
 <script src="script/db.js"></script>
